--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -5,5 +5,18 @@
   <%= @route.name %>
 </p>
 
+<p>
+  <strong>Trains on route:</strong>
+  <% if @route.trains.empty?%>
+      Not indicated
+  <% else %>
+      <ul>
+        <% @route.trains.each do |train|%>
+        <li><%= train.number %> </li>
+            <% end %>
+      </ul>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
