--- a/app/views/railway_stations/show.html.erb
+++ b/app/views/railway_stations/show.html.erb
@@ -11,15 +11,10 @@
     <p> Station is included in the following route: </p>
     <ul>
       <% @railway_station.routes.each do |route| %>
-              <li><%= route.name %><li>
+              <li> <%= route.name %> </li>
       <% end %>
     </ul>
 <% end %>
 
-
-
-
-
-
-     <%= link_to 'Edit', edit_railway_station_path(@railway_station) %> |
+<%= link_to 'Edit', edit_railway_station_path(@railway_station) %> |
 <%= link_to 'Back', railway_stations_path %>
