--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -6,6 +6,11 @@
     <%= f.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= f.label :railway_station_ids, "Current station" %>
+    <%= f.collection_select :railway_station_ids, RailwayStation.all, :id, :title, {}, {multiple: true} %>
+  </div>
+
   <div class="actions">
     <%= f.submit "#{ @route.new_record? ? 'Create' : 'Edit'}" %>
   </div>
