--- a/app/views/railway_stations/_form.html.erb
+++ b/app/views/railway_stations/_form.html.erb
@@ -5,7 +5,8 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "#{ @railway_station.new_record? ? 'Create' : 'Edit'}" %>
   </div>
 <% end %>
