--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -23,16 +23,23 @@
   <% end %>
 </p>
 
-
 <% if @train.wagons.empty? %>
     <p> Train is included any wagons</p>
 <% else %>
     <p> <strong> Train is included following wagons: </strong> </p>
     <ul>
-      <% @train.wagons.each do |wagon| %>
-          <li>type: <%= wagon.wagon_type %> </li>
-          <li>top: <%= wagon.top_place %> </li>
-          <li>bottom: <%= wagon.bottom_place %> </li>
+      <li> <strong>First Class: </strong> <%= @train.wagons.where(wagon_type: 'first_class').count %></li>
+      <li>Top place:<%= @train.wagons.where(wagon_type: 'first_class').sum(:top_place) %></li>
+      <li>Bottom place:<%= @train.wagons.where(wagon_type: 'first_class').sum(:bottom_place) %></li>
+
+      <li> <strong>Second Class:</strong><%= @train.wagons.where(wagon_type: 'second_class').count %></li>
+      <li>Top place: <%= @train.wagons.where(wagon_type: 'second_class').sum(:top_place) %></li>
+      <li>Bottom place: <%= @train.wagons.where(wagon_type: 'second_class').sum(:bottom_place) %></li>
+
+      <% @train.wagons.each do |wagon|  %>
+          <% wagon.wagon_type %>
+          <% wagon.top_place %>
+          <% wagon.bottom_place %>
       <% end %>
     </ul>
 <% end %>
