--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -23,27 +23,18 @@
   <% end %>
 </p>
 
-<% if @train.wagons.empty? %>
-    <p> Train is included any wagons</p>
-<% else %>
-    <p> <strong> Train is included following wagons: </strong> </p>
-    <ul>
-      <li> <strong>First Class: </strong> <%= @train.wagons.where(wagon_type: 'first_class').count %></li>
-      <li>Top place:<%= @train.wagons.where(wagon_type: 'first_class').sum(:top_place) %></li>
-      <li>Bottom place:<%= @train.wagons.where(wagon_type: 'first_class').sum(:bottom_place) %></li>
+<p>
+  <strong>Вагоны</strong>
+  <ul>
+    <% @train.wagons.each do |car| %>
+      <li> <%=link_to "Вагон №#{car.number}", car %> </li>
+    <% end %>
+  </ul>
+</p>
 
-      <li> <strong>Second Class:</strong><%= @train.wagons.where(wagon_type: 'second_class').count %></li>
-      <li>Top place: <%= @train.wagons.where(wagon_type: 'second_class').sum(:top_place) %></li>
-      <li>Bottom place: <%= @train.wagons.where(wagon_type: 'second_class').sum(:bottom_place) %></li>
-
-      <% @train.wagons.each do |wagon|  %>
-          <% wagon.wagon_type %>
-          <% wagon.top_place %>
-          <% wagon.bottom_place %>
-      <% end %>
-    </ul>
-<% end %>
-
+<p>
+  <%= link_to "Добавить вагон", new_train_wagon_path(@train) %>
+</p>
 
 <%= link_to 'Edit', edit_train_path(@train) %> |
 <%= link_to 'Back', trains_path %>
